--- a/Simple_Template_HTML_CSS.html
+++ b/Simple_Template_HTML_CSS.html
@@ -288,7 +288,7 @@ ALL: #7e7e7e; -->
                           <tr>
                             <td class="stylingblock-content-margin-cell"><table role="presentation" style="background-color: transparent;" class="stylingblock-content-wrapper" width="70%" align="center" cellspacing="0" cellpadding="0">
                                 <tr>
-                                  <td align="right"><a href="https://www.guidepoint.com/insights" title="" alias="" conversion="true" data-linkto="https://"></a></td>
+                                  <td align="right"><a href="link" title="" alias="" conversion="true" data-linkto="https://"></a></td>
                                 </tr>
                               </table></td>
                           </tr>
@@ -308,7 +308,7 @@ ALL: #7e7e7e; -->
                           <tr>
                             <td class="responsive-td" valign="top" style="width: 100%;"><table style="min-width: 100%" class="stylingblock-content-wrapper" width="100%" cellspacing="0" cellpadding="0">
                                 <tr>
-                                  <td style="padding: 0px 50px 10px; " class="stylingblock-content-wrapper camarker-inner"><a href="https://www.guidepoint.com/error-page/" style="color: transparent; text-decoration: none;">&nbsp;</a>
+                                  <td style="padding: 0px 50px 10px; " class="stylingblock-content-wrapper camarker-inner"><a href="link" style="color: transparent; text-decoration: none;">&nbsp;</a>
                                     <div style="font-size:24px; font-family:Arial,Helvetica,sans-serif; line-height: 115%; color: #272727"> <strong>HEADLINE</strong> <br>
                                       <span style="color:#7e7e7e; font-size:16px; font-family:Arial,Helvetica,sans-serif;"> </span> </div></td>
                                 </tr>
@@ -326,7 +326,7 @@ ALL: #7e7e7e; -->
                                                   <tr>
                                                     <td class="innertd buttonblock" align="center" style=" border-radius: 4px; -moz-border-radius: 4px; -webkit-border-radius: 4px; -ms-text-size-adjust: 100%; mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #008BCE;" bgcolor="#008BCE"><table role="presentation" cellspacing="0" cellpadding="0" border="0">
                                                         <tr>
-                                                          <td align="center" style="border-radius: 4px; background: #008BCE; mso-line-height-rule: exactly; line-height: 100%;"><a target="_blank" class="buttonstyles" href="https://new.guidepointglobal.com/events/reply?k=3ugeKfuvFv9fmYUMyLgYwRkixFl.SzdXHFMWSeZi&q=3igeKfurZ0AB-Egs9qu8sl8FmwvMi9g1kuFyxfY.8eEIAjLjVpv0" style="display: block; background: #008BCE; font-size: 14px; font-family: Arial, helvetica, sans-serif; mso-line-height-rule: exactly; line-height: 115%; text-align: center; text-decoration: none; -ms-text-size-adjust: 100%; color: #FFFFFF; border: 1px solid transparent; padding: 13px; border-radius: 10px; mso-border-alt: 10px solid #008BCE; mso-padding-alt: 0; -moz-border-radius: 10px; mso-table-lspace: 0pt; mso-table-rspace: 0pt; -webkit-border-radius: 10px;" title="" alias="" conversion="false" data-linkto="https://">click me</a></td>
+                                                          <td align="center" style="border-radius: 4px; background: #008BCE; mso-line-height-rule: exactly; line-height: 100%;"><a target="_blank" class="buttonstyles" href="link" style="display: block; background: #008BCE; font-size: 14px; font-family: Arial, helvetica, sans-serif; mso-line-height-rule: exactly; line-height: 115%; text-align: center; text-decoration: none; -ms-text-size-adjust: 100%; color: #FFFFFF; border: 1px solid transparent; padding: 13px; border-radius: 10px; mso-border-alt: 10px solid #008BCE; mso-padding-alt: 0; -moz-border-radius: 10px; mso-table-lspace: 0pt; mso-table-rspace: 0pt; -webkit-border-radius: 10px;" title="" alias="" conversion="false" data-linkto="https://">click me</a></td>
                                                         </tr>
                                                       </table></td>
                                                   </tr>
@@ -393,7 +393,8 @@ ALL: #7e7e7e; -->
                                                               <tr>
                                                                 <td class="innertd buttonblock" style=" border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; background-color: #008BCE;" bgcolor="#008BCE"><table role="presentation" cellspacing="0" cellpadding="0" border="0">
                                                                     <tr>
-                                                                      <td style="border-radius: 4px; background: #008bce;"><a target="_blank" class="buttonstyles" href="https://new.guidepointglobal.com/events/reply?k=3AgBKfuyOMFUxpigZfA9IdYFD0c.RTmd5xci55w1&q=34gBKfu90xEFAGsmPqMfggFBlfwuiYsIy-8vN89.2Y6FGiUh5lvb" style="display: block; background: #008BCE; font-size: 14px; font-family: Arial, helvetica, sans-serif; line-height: 15px; text-align: center; text-decoration: none; color: #FFFFFF; border: 1px solid transparent; padding: 10px; border-radius: 10px; mso-border-alt: 8px solid #008bce; mso-padding-alt: 0; -moz-border-radius: 10px; -webkit-border-radius: 10px;" title="" alias="" conversion="false" data-linkto="https://">click me</a></td>
+                                                                      <td style="border-radius: 4px; background: #008bce;"><a target="_blank" class="buttonstyles" href="link
+                                                                          " style="display: block; background: #008BCE; font-size: 14px; font-family: Arial, helvetica, sans-serif; line-height: 15px; text-align: center; text-decoration: none; color: #FFFFFF; border: 1px solid transparent; padding: 10px; border-radius: 10px; mso-border-alt: 8px solid #008bce; mso-padding-alt: 0; -moz-border-radius: 10px; -webkit-border-radius: 10px;" title="" alias="" conversion="false" data-linkto="https://">click me</a></td>
                                                                     </tr>
                                                                   </table></td>
                                                               </tr>
